attack depence logic uplaod
